--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.4",
+    "@types/jest": "^25.1.5",
+    "@types/node": "^18.0.5",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
@@ -25,7 +29,6 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.14",
-    "sass": "^1.53.0",
     "package.json": "^2.0.1",
     "prop-types": "^15.7.2",
     "rclone-api": "^1.0.10",
@@ -47,11 +50,13 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "sass": "^1.53.0",
     "simple-line-icons": "^2.4.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
+    "@types/enzyme": "^3.10.12",
     "check-prop-types": "^1.1.2",
     "coveralls": "^3.1.0",
     "enzyme": "^3.11.0",
@@ -60,7 +65,7 @@
     "fetch-mock": "^9.4.0",
     "react-dnd-test-backend": "^11.1.3",
     "react-dnd-test-utils": "^11.1.3",
-    "react-scripts": "^3.3.1",
+    "react-scripts": "^3.4.0",
     "redux-mock-store": "^1.5.4"
   },
   "scripts": {
