--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,8 @@
     "checkJs": false,
     "noImplicitAny": false
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "node_modules"
+  ]
 }
