--- a/package.json
+++ b/package.json
@@ -9,17 +9,13 @@
   "homepage": "./",
   "repository": {
     "type": "git",
-    "url": "git@github.com:negative0/rclone-webui-react.git"
+    "url": "git@github.com:rclone/rclone-webui-react.git"
   },
   "dependencies": {
-    "@coreui/coreui": "^2.1.16",
+    "@coreui/coreui": "^4.2.0",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
-    "@coreui/react": "^2.5.4",
-    "@types/jest": "^25.1.5",
-    "@types/node": "^18.0.5",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "@coreui/react": "^4.3.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
@@ -30,20 +26,21 @@
     "jquery": "^3.5.1",
     "lodash": "^4.17.14",
     "package.json": "^2.0.1",
+    "postcss-preset-env": "^7.7.2",
     "prop-types": "^15.7.2",
     "rclone-api": "^1.0.10",
-    "react": "^16.12.0",
+    "react": "^18.0.0",
     "react-app-polyfill": "^1.0.6",
     "react-autosuggest": "^10.0.0",
     "react-awesome-player": "^1.0.11",
     "react-chartjs-2": "^2.9.0",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
-    "react-dom": "^16.12.0",
+    "react-dom": "^18.2.0",
     "react-in-viewport": "0.0.38",
     "react-redux": "^7.1.3",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "~5.2.0",
+    "react-router-dom": "^6.3.0",
     "react-test-renderer": "^16.12.0",
     "react-toastify": "^6.0.0",
     "reactstrap": "^8.4.1",
@@ -51,23 +48,29 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass": "^1.53.0",
-    "simple-line-icons": "^2.4.1",
-    "typescript": "^3.3.4"
+    "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@types/enzyme": "^3.10.12",
+    "@types/jest": "^25.1.5",
+    "@types/node": "^18.0.5",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "check-prop-types": "^1.1.2",
     "coveralls": "^3.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
     "fetch-mock": "^9.4.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "prettier": "^2.7.1",
     "react-dnd-test-backend": "^11.1.3",
     "react-dnd-test-utils": "^11.1.3",
-    "react-scripts": "^3.4.0",
-    "redux-mock-store": "^1.5.4"
+    "react-scripts": "^5.0.1",
+    "redux-mock-store": "^1.5.4",
+    "typescript": "^3.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
