--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-dnd-test-utils": "^11.1.3",
     "react-scripts": "^5.0.1",
     "redux-mock-store": "^1.5.4",
+    "tailwind-styled-components": "^2.1.8",
     "typescript": "^3.3.4"
   },
   "scripts": {
