--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^4.3.0",
+    "@fontsource/inter": "^4.5.11",
     "axios": "^0.21.1",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
