--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
     "type": "git",
     "url": "git@github.com:rclone/rclone-webui-react.git"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "test:cov": "react-scripts test --coverage",
+    "test:debug": "react-scripts --inspect-brk test --runInBand",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
+    "eject": "react-scripts eject",
+    "rclone": "rclone rcd --rc-allow-origin http://localhost:3000 --rc-user miro --rc-pass kissa123"
+  },
   "dependencies": {
     "@coreui/coreui": "^4.2.0",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
@@ -70,15 +80,6 @@
     "redux-mock-store": "^1.5.4",
     "tailwind-styled-components": "^2.1.8",
     "typescript": "^3.3.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "test:cov": "react-scripts test --coverage",
-    "test:debug": "react-scripts --inspect-brk test --runInBand",
-    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
-    "eject": "react-scripts eject"
   },
   "bugs": {
     "url": "https://github.com/negative0/rclone-webui-react/issues"
