--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "lodash": "^4.17.14",
+    "lodash.map": "^4.6.0",
     "package.json": "^2.0.1",
     "postcss-preset-env": "^7.7.2",
     "prop-types": "^15.7.2",
