--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prop-types": "^15.7.2",
     "rclone-api": "^1.0.10",
     "react": "^18.0.0",
+    "react-accessible-dropdown-menu-hook": "^3.2.0",
     "react-autosuggest": "^10.0.0",
     "react-awesome-player": "^1.0.11",
     "react-chartjs-2": "^2.9.0",
